Polish css and fix graph visual bug

--- a/src/index.html
+++ b/src/index.html
@@ -117,22 +117,22 @@
       <section class='section_other_users'>
         <h2>OTHER USERS<span class='section_other_users_h2_span'><img src='icons/users-solid.svg' class='fas fa-users'></span>
         </h2>
-        <div class='div_steps_other_users'>
+        <div class='div_steps_other_users div_activity_section'>
           <h3 class='div_steps_other_users_h3'>Average Step Goal of All Users</h3>
           <p class='div_steps_other_users_p'>
           </p>
         </div>
-        <div class='div_activity_steps_other_users'>
+        <div class='div_activity_steps_other_users div_activity_section'>
           <h3 class='div_activity_steps_other_users_h3'>Average Steps of All Users ON <span class='activity_date'></span></h3>
           <p class='div_activity_steps_other_users_p'>
           </p>
         </div>
-        <div class='div_activity_min_active_other_users'>
+        <div class='div_activity_min_active_other_users div_activity_section'>
           <h3 class='div_activity_min_active_other_users_h3'>Average Minutes Active of All Users ON <span class='activity_date'></span></h3>
           <p class='div_activity_min_active_other_users_p'>
           </p>
         </div>
-        <div class='div_activity_stairs_other_users'>
+        <div class='div_activity_stairs_other_users div_activity_section'>
           <h3 class='div_activity_stairs_other_users_h3'>Average Flights of Stairs of All Users ON <span class='activity_date'></span></h3>
           <p class='div_activity_stairs_other_users_p'>
           </p>
