Refactor tests with beforeEach, fix charts updating in scripts file

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             <span class='section_hydro_h2_span'><img src='icons/tint-solid.svg' class='fas fa-tint'></span>
           </h2>
           <ul>
-            <li>OUNCES CONSUMED TODAY
+            <li>OUNCES CONSUMED
               <p class='hydro_day'></p>
             </li>
             <li>
